# mini_llm

./: .gitignore  CHANGELOG.md  README.md  api_server.py  benchmark_inference.py  checkpoint_manager.py  cli.py  config_manager.py  dashboard.py  demo_interactive.py  evaluate.py  evaluate_model.py  export_model.py  finetune.py  memory_manager.py  mini_llm.py  pipeline.py  pre_training_check.py  profile_gpu.py  pyproject.toml  requirements.txt  run_all_tests.py  run_generate.py  run_training.py  sanity_check.py  setup.py  stress_test.py  ui_server.py  validate_model.py  verify_project_structure.py
agents/: __init__.py
benchmark/: __init__.py  dataset.jsonl  evaluate.py
chat/: __init__.py  server.py  ui.py
data/raw/: build_dataset.py  dataset.txt  instructions.json  natural_dialogs.json  natural_responses.json  openassistant.json  prepare_dataset.py  technical_text.json
inference/: generate.py
model/: __init__.py  config.py  transformer.py
plugins/: __init__.py
tests/: test_end_to_end.py  test_generate.py  test_model_forward.py  test_tokenizer.py
tokenizer/: build_tokenizer.py  merges.txt  tokenizer.json  tokenizer.py  vocab.json
training/: control.py  dataset.py  train.py  training_stats.py
ui/: app.js  index.html  style.css
utils/: helpers.py  plot_training.py  quantization.py  quantize_4bit.py
