[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini_llm"
version = "1.0.0"
description = "Mini-LLM — Lightweight Local Language Model"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["torch", "fastapi", "uvicorn"]

[project.scripts]
mini-llm = "cli:main"
